<resources>
    <string name="app_name">Trappi</string>
    <string name="paquetesFondsss">Hemos encontrado los siguientes posibles</string>
    <string name="destPack">Destinos y paquetes turísticos:</string>
    <string name="pago_recibido">Tu pago fue exitoso</string>
    <string name="compra_realizada_correctamente">
        Prepara tus maletas y disfruta de tu viaje
        \nTe espera una experiencia inolvidable
    </string>

    <string name="carrito_total">Total a pagar: $</string>
    <string name="checkOut">CheckOut</string>
    <string name="carrito">Carrito</string>
    <string name="Menu_For_Testing">Menu For Testing</string>
    <string name="menu_for_testing_screens">This is a menu for testing screens\nFeel free to add your buttons to your screens</string>
    <string name="product_Name">Nombre del producto</string>
    <string name="price">Precio</string>
    <string name="payment">Pago</string>
    <string name="confirmar_pago">Confirmar pago</string>
    <string name="orden">Orden</string>
    <string name="precio_orden">$100,00</string>
    <string name="fee">Comision</string>
    <string name="precio_fee">$1.200,00</string>
    <string name="total">Total</string>$1.200,00
    <string name="precio_total">$1.300,99</string>
    <string name="pago_exitoso">Pago exitoso</string>
    <string name="bienvenida">Bienvenido a Trappi</string>
    <string name="descrHome">Aquí puedes organizar tus próximas vacaciones!</string>

</resources>